--- a/home.html
+++ b/home.html
@@ -75,6 +75,8 @@
             color: black;
             font-size: 23px;
             margin: 0 10px; /* Adjusted margin */
+            width: 500px;
+            height: 615px;
         }
         .box img {
             max-width: 100%;
@@ -118,14 +120,17 @@
         <a href="/analyze.html" class="box" id="box1">
             <img src="img/stu.jpeg" alt="Image 1">
             <p>1. Analyze Student Performance</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, cupiditate.</p>
             </a>
         <a href="/studyplan.html" class="box" id="box2">
             <img src="img/WhatsApp Image 2024-06-08 at 02.00.57_e89c353d.jpg" alt="Image 2">
             <p>2. Personalized Study Planner</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ab!</p>
         </a>
         <a href="/sheshank.html" class="box" id="box3">
             <img src="img/Designer.png" alt="Image 3">
             <p>3. Adaptive Assessment</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, nulla!</p>
         </a>
     </div>
     <footer>
