--- a/home.html
+++ b/home.html
@@ -106,6 +106,9 @@
 </head>
 <body>
     <header>
+        
+        
+
         <img src="img/EDU360__1_-removebg-preview.png" alt="Logo">
         <span class="hello" style="font-size: 1.8em;">EDU360    </span> <!-- Increased size by 80% -->
         <h1 id="headerhead">Home</h1>
@@ -116,10 +119,14 @@
         </button>
         </a>
     </header>
+
+
+    <h2>home page: welcome to the homepage of edu360, here you can access our tools that can help teachers upload data to a secure database system, get student progress analytics, and other tools to help their students reach further than before.</h2>      
+
     <div class="container">
         <a href="/analyze.html" class="box" id="box1">
             <img src="img/stu.jpeg" alt="Image 1">
-            <p>1. Analyze Student Performance</p>
+            <p`>1. Analyze Student Performance</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, cupiditate.</p>
             </a>
         <a href="/studyplan.html" class="box" id="box2">
