--- a/home.html
+++ b/home.html
@@ -63,6 +63,8 @@
             overflow-y: auto; /* Enable vertical scrolling for container */
         }
         .box {
+            border: 2px solid white;
+            border-radius: 40px ;
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -105,16 +107,17 @@
 
         .welcome{
             display: flex;
-            border: 2px solid red;
             width: 100%;
             height: 300px;
             text-align: center;
-            font-family: sans-serif;
+            font-family: cursive;
             align-items: center;
         }
 
         .welcome h2{
-            font-size: 20px;
+            font-size: 30px;
+            font-family: cursive;
+            
         }
     </style>
 </head>
