--- a/studyplan.html
+++ b/studyplan.html
@@ -267,7 +267,7 @@ h2 {
 <header>
     <img src="img/EDU360__1_-removebg-preview.png" alt="Logo">
     <span class="hello" style="font-size: 1.8em;">EDU360    </span> 
-    <h1 id="headerhead">Analyze Student Performance</h1>
+    <h1 id="headerhead">Personalised Study Planner</h1>
 </header>
 <body>
     <div class="container">
