--- a/studyplan.html
+++ b/studyplan.html
@@ -6,9 +6,9 @@
     <title>Study Recommendations</title>
     <style>
 .container {
-    margin: 20px;
+    margin: 120px 20px 20px 20px; /* Increased top margin to move it downwards */
     width: 80%;
-    margin: auto;
+    height: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +24,7 @@
 .visible {
     display: block;
 }
+
 
 .result-container {
     margin-top: 20px;
@@ -120,9 +121,13 @@ h2 {
 
 
     .container {
+        height: 400px;
+        margin: 120px auto 20px auto;
+        
+    
     border:2px solid black;
     width: 80%; /* Adjust the width as needed */
-    margin: auto; /* Center the container horizontally */
+     /* Center the container horizontally */
     display: flex;
     flex-direction: column;
     align-items: center; /* Center the items vertically */
