--- a/analyze.html
+++ b/analyze.html
@@ -122,6 +122,10 @@
         <img src="img/EDU360__1_-removebg-preview.png" alt="Logo">
         <span class="hello" style="font-size: 1.8em;">EDU360    </span> 
         <h1 id="headerhead">Analyze Student Performance</h1>
+        <button >
+            <img src="img/pngtree-file-upload-icon-image_1344393[1].jpg" alt="Upload"> <!-- Larger image on upload button -->
+            Upload
+        </button>
     </header>
     <div class="main-content">
         <div class="form-group">
