--- a/studyplan.html
+++ b/studyplan.html
@@ -66,6 +66,24 @@ header h1 {
             position: relative;
             text-align: center; /* Center-align text */
         }
+        header button {
+            padding: 15px 30px; /* Increased padding */
+            font-size: 16px;
+            cursor: pointer;
+            background-color: white;
+            color: #000; /* Changed text color to black */
+            border: none;
+            border-radius: 5px;
+            position: relative;
+            text-align: center; /* Center-align text */
+        }
+        header button img {
+            width: 30px; /* Larger image size */
+            height: auto;
+            margin-bottom: 5px; /* Spacing between image and text */
+            display: block; /* Ensure proper positioning */
+            margin: 0 auto; /* Center-align image */
+        }
 
 #headerhead {
     width: 100%;
@@ -273,6 +291,10 @@ h2 {
     <img src="img/EDU360__1_-removebg-preview.png" alt="Logo">
     <span class="hello" style="font-size: 1.8em;">EDU360    </span> 
     <h1 id="headerhead">Personalised Study Planner</h1>
+    <button >
+        <img src="img/pngtree-file-upload-icon-image_1344393[1].jpg" alt="Upload"> <!-- Larger image on upload button -->
+        Upload
+    </button>
 </header>
 <body>
     <div class="container">
