--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
         <a href="/analyze.html" class="box" id="box1">
             <img src="img/stu.jpeg" alt="Image 1">
             <p`>1. Analyze Student Performance</p>
-            <p>A student performance analysis tool that helps the teacher understand the specifics of how the student has been progressing. click on the upload csv button on the upper right corner to add your class and get started</p>
+            <p>A student performance analysis tool that helps the teacher understand the specifics of how the student has been progressing.</p>
             </a>
         <a href="/studyplan.html" class="box" id="box2">
             <img src="img/WhatsApp Image 2024-06-08 at 02.00.57_e89c353d.jpg" alt="Image 2">
