--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
             overflow-y: auto; /* Enable vertical scrolling for container */ 
         }
         .box {
-            border: 2px solid red;
+            border: 2px solid white;
             border-radius: 40px ;
             flex: 1;
             display: flex;
@@ -80,6 +80,8 @@
             height: 582px;
         }
         .box img {
+            margin-bottom: 65px;
+            border-radius: 40px;
             width: 100%;
             height: 350px;
             max-width: 100%;
@@ -119,6 +121,11 @@
             font-size: 30px;
             font-family: cursive;
             
+        }
+
+        #box1 img{
+            margin-bottom: 108px;
+            height: 350px;
         }
     </style>
 </head>
