--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
             align-items: center;
         }
 
-        .welcome h2{
+        .welcome p{
             font-size: 30px;
             font-family: cursive;
             
@@ -126,6 +126,11 @@
         #box1 img{
             margin-bottom: 108px;
             height: 350px;
+        }
+
+        #box1 h2{
+            height: 100%;
+            margin-bottom :50px;
         }
     </style>
 </head>
@@ -143,7 +148,7 @@
     </header>
 
     <div class="welcome">
-        <h2>Welcome to the homepage of edu360, here you can access our tools that can help teachers upload data to a secure database system, get student progress analytics, and other tools to help their students reach further than before.</h2>      
+        <p>Welcome to the homepage of edu360, here you can access our tools that can help teachers upload data to a secure database system, get student progress analytics, and other tools to help their students reach further than before.<p>      
     </div>
     
     <div class="container">
