--- a/home.html
+++ b/home.html
@@ -124,13 +124,13 @@
         }
 
         #box1 img{
-            margin-bottom: 108px;
+            margin-bottom: 88px;
             height: 350px;
         }
 
         #box1 h2{
             height: 100%;
-            margin-bottom :50px;
+            margin-bottom :500px;
         }
     </style>
 </head>
@@ -154,7 +154,7 @@
     <div class="container">
         <a href="/analyze.html" class="box" id="box1">
             <img src="img/stu.jpeg" alt="Image 1">
-            <p`>1. Analyze Student Performance</p>
+            <p>1. Analyze Student Performance</p>
             <p>A student performance analysis tool that helps the teacher understand the specifics of how the student has been progressing.</p>
             </a>
         <a href="/studyplan.html" class="box" id="box2">
