--- a/analyze.html
+++ b/analyze.html
@@ -151,6 +151,20 @@
 
         <button id="analyzeButton">Analyze</button>
 
+
+        <div id="message">
+            <h2>This tool helps teachers understand what habits to encourage and which areas need attention.</h2>
+            <p> <br>Average Study Hours: Understand if the student is dedicating enough time to studying.
+                <br>Average Attendance: Crucial for consistent learning and engagement.
+                <br>Average Marks: General idea of the student's performance level.
+                <br>Marks Consistency (Standard Deviation): Indicates how consistently the student performs.
+                <br>Study Hours Consistency (Standard Deviation): Highlights the consistency of study habits.
+                <br>Performance Trend: Shows if marks are improving or declining over time.
+                <br>Study Efficiency (Correlation between Study Hours and Marks): Measures the effectiveness of study time.
+                <br>Attendance Impact (Correlation between Attendance and Marks): Indicates the impact of attendance on performance.
+                <br>Improvement Rate: The rate of change in marks over time.</p>
+        </div>
+
         <div class="analysis-results">
             <h2>Analysis Results</h2>
             <div id="insights" class="insights"></div>
