--- a/studyplan.html
+++ b/studyplan.html
@@ -156,6 +156,11 @@ h2 {
     width: 100px;
 }
 
+    .message p{
+        font-size: 25px;
+        font-family: Source Sans Pro;
+    }
+
     </style>
     <script>
         let currentStep = 0;
@@ -297,6 +302,10 @@ h2 {
     </button>
 </header>
 <body>
+    <div class="message">
+        <p>Welcome to the Study Recommendations Tool, a personalized assistant designed to help students optimize their study sessions. This tool is crucial because it recognizes that every student's learning abilities and preferences are unique. <br> By considering individual study preferences, usual study durations, and the specific subjects and topics you need to focus on, our tool generates tailored study recommendations and an effective timetable. <br> This personalized approach ensures that you can study smarter, not harder, making the most of your time and efforts. <br> Embrace the power of personalized learning to achieve your academic goals more efficiently and effectively.</p>
+    </div>
+
     <div class="container">
         <!-- <h1>Study Recommendations</h1> -->
         <div id="student_id_container" class="hidden">
