--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
 
         .welcome p{
             font-size: 30px;
-            font-family: cursive;
+            font-family: Source Sans Pro;
             
         }
 
