--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
             max-height: 100%; /* Ensure the image doesn't overflow */
         }
         .box p {
-            margin: 10px 0;
+            margin: -2px;
             text-align: center;
         }
         footer {
@@ -132,6 +132,8 @@
             height: 100%;
             margin-bottom :500px;
         }
+
+        
     </style>
 </head>
 <body>
