--- a/studyplan.html
+++ b/studyplan.html
@@ -159,6 +159,7 @@ h2 {
     .message p{
         font-size: 25px;
         font-family: Source Sans Pro;
+        text-align: center;
     }
 
     </style>
