--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
             height: 582px;
         }
         .box img {
-            margin-bottom: 65px;
+            margin-bottom: 110px;
             border-radius: 40px;
             width: 100%;
             height: 350px;
@@ -133,7 +133,9 @@
             margin-bottom :500px;
         }
 
-        
+        #box1 p{
+            margin-bottom:20px; 
+        }
     </style>
 </head>
 <body>
