--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Source Sans Pro;
             background-color: #f0f0f0;
             height: 100%; /* Set body height to 100% */
         }
@@ -80,7 +80,7 @@
             height: 582px;
         }
         .box img {
-            margin-bottom: 110px;
+            margin-bottom: 132px;
             border-radius: 40px;
             width: 100%;
             height: 350px;
