--- a/studyplan.html
+++ b/studyplan.html
@@ -139,6 +139,7 @@ h2 {
 
 
     .container {
+        background-color: white;
         height: 400px;
         margin: 120px auto 20px auto;
     width: 80%; /* Adjust the width as needed */
